[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/parachains",
	"runtime/indracore",
	"runtime/xelendra",
	"runtime/test-runtime",
	"statement-table",
	"validation",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"node/collation-generation",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/proposer",
	"node/core/provisioner",
	"node/core/runtime-api",
	"node/network/bridge",
	"node/network/pov-distribution",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/collator-protocol",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/test/client",
	"node/test/service",
	"parachain",
	"parachain/test-parachains",
	
	"cumulus/consensus",
	"cumulus/message-broker",
	"cumulus/network",
	"cumulus/parachain-upgrade",
	"cumulus/primitives",
	"cumulus/xcm-handler",
	"indracore",
]

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Indracore runtime requires unwinding.
panic = "unwind"