[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/xelendra-parachain",
	"runtime/common",
	"runtime/parachains",
	"runtime/indracore",
	"runtime/xelendra",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"cumulus/primitives",
	"cumulus/network",
	"cumulus/runtime",
	"cumulus/consensus",
	"cumulus/collator",
	"cumulus/service",
	"cumulus/xcm-handler",
	"cumulus/parachain-system",
	"cumulus/parachain-info",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/proposer",
	"node/core/provisioner",
	"node/core/runtime-api",
	"node/network/bridge",
	"node/network/approval-distribution",
	"node/network/availability-recovery",
	"node/network/pov-distribution",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/collator-protocol",
	"node/metered-channel",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
    "node/indracore",
	"node/xelendra-collator",
]

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Indracore runtime requires unwinding.
panic = "unwind"