[package]
name = "indracore-cli"
version = "0.8.27"
authors = ["Selendra <info@selendra.org>"]
description = "Indracore Relay-chain Client Node"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.13"
thiserror = "1.0.23"
futures = "0.3.10"
structopt = { version = "0.3.21", optional = true }
wasm-bindgen = { version = "0.2.69", optional = true }
wasm-bindgen-futures = { version = "0.4.19", optional = true }

service = { package = "indracore-service", path = "../node/service", default-features = false, optional = true }
indracore-parachain = { path = "../parachain", optional = true }

sp-core = { git = "https://github.com/laynath242/substrate", branch = "master" }
tracing-futures = "0.2.4"
frame-benchmarking-cli = { git = "https://github.com/laynath242/substrate", branch = "master", optional = true }
sc-cli = { git = "https://github.com/laynath242/substrate", branch = "master", optional = true }
sc-service = { git = "https://github.com/laynath242/substrate", branch = "master", optional = true }
browser-utils = { package = "substrate-browser-utils", git = "https://github.com/laynath242/substrate", branch = "master", optional = true }

# this crate is used only to enable `trie-memory-tracker` feature
sp-trie = { git = "https://github.com/laynath242/substrate", branch = "master", default-features = false }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/laynath242/substrate", branch = "master" }

[features]
default = [ "wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "indracore-parachain" ]
wasmtime = [ "sc-cli/wasmtime" ]
db = [ "service/db" ]
cli = [
	"structopt",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
]
browser = [
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"browser-utils",
	"service",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
trie-memory-tracker = [ "sp-trie/memory-tracker" ]
full-node = [ "service/full-node" ]
real-overseer = [ "service/real-overseer" ]
