[package]
authors = ['Selendra <nath@selendra.org>']
edition = '2018'
name = 'indracore-core-primitives'
version = '2.0.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-core = { path = "../substrate/primitives/core", default-features = false }
sp-std = {  path = "../substrate/primitives/std", default-features = false}
sp-runtime = {  path = "../substrate/primitives/runtime", default-features = false}

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
]