[package]
name = "indracore-core-primitives"
version = "0.7.30"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
sp-core = { path = "../substrate/primitives/core", default-features = false }
sp-std = { path = "../substrate/primitives/std", default-features = false }
sp-runtime = { path = "../substrate/primitives/runtime", default-features = false }
parity-scale-codec = { version = "1.3.5", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"parity-scale-codec/std",
]
