[package]
name = "indracore-core-primitives"
version = "0.7.30"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
sp-core = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master", default-features = false }
parity-scale-codec = { version = "1.3.6", default-features = false, features = [ "derive" ] }
parity-util-mem = { version = "0.8.0", default-features = false, optional = true }

[features]
default = [ "std" ]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"parity-scale-codec/std",
	"parity-util-mem",
]
