[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
derive_more = "0.99"
log = "0.4.8"

# local dependencies
node-indracore-runtime = { path = '../runtime', version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = '2.0.0'
frame-benchmarking-cli = '2.0.0'
pallet-transaction-payment-rpc = '2.0.0'
sc-basic-authorship = '0.8.0'
sc-cli = { features = ['wasmtime'], version = '0.8.0' }
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-chain-spec = "2.0.0"
sc-executor = { features = ['wasmtime'], version = '0.8.0' }
sc-rpc = '2.0.0'
sc-rpc-api = '0.8.0'
sc-service = { features = ['wasmtime'], version = '0.8.0' }
sc-transaction-pool = '2.0.0'
sp-api = '2.0.0'
sp-block-builder = '2.0.0'
sp-blockchain = '2.0.0'
sp-consensus = '0.8.0'
sp-core = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'
substrate-frame-rpc-system = '2.0.0'
sc-keystore = { version = "2.0.0" }
sc-network = { version = "0.8.0" }
sc-authority-discovery = { version = "0.8.0" }
sp-authority-discovery = { version = "2.0.0" }
pallet-im-online = { version = '2.0.0' }
telemetry = { package = "sc-telemetry", version = '2.0.0' }

primitives = { package = "core-primitives", path = "../core-primitives"}

sc-consensus-babe = '0.8.0'
sp-consensus-babe = '0.8.0'
sc-consensus-babe-rpc = { version = "0.8.0" }
sc-consensus-epochs = { version = "0.8.0" }
grandpa = { package = "sc-finality-grandpa", version = '0.8.0'}
sp-finality-grandpa = '2.0.0'
sc-finality-grandpa-rpc = { version = "0.8.0" }

[features]
default = []
runtime-benchmarks = ['node-indracore-runtime/runtime-benchmarks']
