[package]
name = "indracore-parachain"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
description = "Types and utilities for creating and working with parachains"
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = [ "derive" ] }
derive_more = "0.99.11"
thiserror = { version = "1.0.22", optional = true }
serde = { version = "1.0.117", default-features = false, features = [ "derive" ], optional = true }
parking_lot = { version = "0.11.0", optional = true }
log = { version = "0.4.11", optional = true }
futures = { version = "0.3.8", optional = true }

sp-std = { path = "../substrate/primitives/std", default-features = false }
sp-runtime = { path = "../substrate/primitives/runtime", default-features = false }
sp-core = { path = "../substrate/primitives/core", default-features = false }
sp-wasm-interface = { path = "../substrate/primitives/wasm-interface", default-features = false }
sp-externalities = { path = "../substrate/primitives/externalities", optional = true }
sc-executor = { path = "../substrate/client/executor", optional = true }
sp-io = { path = "../substrate/primitives/io", optional = true }

indracore-core-primitives = { path = "../core-primitives", default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
shared_memory = { version = "0.10.0", optional = true }

[features]
default = ["std"]
wasm-api = []
std = [
	"parity-scale-codec/std",
	"thiserror",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"shared_memory",
	"sp-core/std",
	"parking_lot",
	"log",
	"sp-externalities",
	"sc-executor",
	"sp-io",
	"indracore-core-primitives/std",
	"futures",
]
