[package]
authors = ['Selendra <nath@selendra.org>']
edition = '2018'
name = 'primitives'
version = '2.0.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["bit-vec", "derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }

frame-system = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false}
sp-runtime = { version = "2.0.0", default-features = false}
application-crypto = { package = "sp-application-crypto", version = "2.0.0", default-features = false }
sp-staking = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }
sp-inherents = { version = "2.0.0", default-features = false }
sp-version = { version = "2.0.0", default-features = false }
sp-api = { version = "2.0.0", default-features = false }
sp-authority-discovery = { version = "2.0.0", default-features = false }

# sp-keystore = { version = "0.8.0", path = "../keystore", optional = true }
core-primitives = { path = "../core-primitives", default-features = false }
# indracore-parachain = { path = "../../parachain", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
    "application-crypto/std",
    "sp-staking/std",
    "core-primitives/std",
    "sp-arithmetic/std",
    "sp-inherents/std",
    "sp-version/std",
    "sp-authority-discovery/std",
    "sp-api/std",
    "serde",
    # "sp-keystore",
    # "indracore-parachain/std",
]