[package]
authors = ['Selendra <nath@selendra.org>']
edition = '2018'
name = 'indracore-primitives'
version = '2.0.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["bit-vec", "derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }

frame-system = { path = "../substrate/frame/system", default-features = false }
sp-core = { path = "../substrate/primitives/core", default-features = false }
sp-std = { path = "../substrate/primitives/std", default-features = false}
sp-runtime = { path = "../substrate/primitives/runtime", default-features = false}
application-crypto = { package = "sp-application-crypto", path = "../substrate/primitives/application-crypto", default-features = false }
sp-staking = { path = "../substrate/primitives/staking", default-features = false }
sp-arithmetic = { path = "../substrate/primitives/arithmetic", default-features = false }
sp-inherents = { path = "../substrate/primitives/inherents", default-features = false }
sp-version = { path = "../substrate/primitives/version", default-features = false }
sp-api = { path = "../substrate/primitives/api", default-features = false }
sp-authority-discovery = { path = "../substrate/primitives/authority-discovery", default-features = false }

sp-keystore = { path = "../substrate/primitives/keystore", optional = true }
core-primitives = { package = "indracore-core-primitives", path = "../core-primitives", default-features = false }
indracore-parachain = { path = "../parachain", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
    "application-crypto/std",
    "sp-staking/std",
    "core-primitives/std",
    "sp-arithmetic/std",
    "sp-inherents/std",
    "sp-version/std",
    "sp-authority-discovery/std",
    "sp-api/std",
    "serde",
    "sp-keystore",
    "indracore-parachain/std",
]