[package]
authors = ['Selendra <nath@selendra.org>']
edition = '2018'
name = 'node-indracore-runtime'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
hex-literal = { optional = true, version = '0.3.1' }
static_assertions = "1.1.0"
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
pallet-session-benchmarking = { version = '2.0.0', default-features = false, optional = true }
pallet-offences-benchmarking = { version = " 2.0.0", default-features = false, optional = true }

frame-executive = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }

frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-grandpa = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
pallet-sudo = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
sp-block-builder = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-inherents = { default-features = false, version = '2.0.0' }
sp-offchain = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-session = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
sp-version = { default-features = false, version = '2.0.0' }

pallet-scheduler = { default-features = false, version = '2.0.0' }
pallet-collective = { default-features = false, version = '2.0.0' }
pallet-membership = { default-features = false, version = '2.0.0' }
pallet-elections-phragmen = { default-features = false, version = '2.0.0' }
pallet-democracy = { default-features = false, version = '2.0.0' }
pallet-treasury = { default-features = false, version = '2.0.0' }

pallet-session = { version = '2.0.0', default-features = false, features = ["historical"] }
pallet-staking = { default-features = false, version = '2.0.0' }
pallet-staking-reward-curve = { version = '2.0.0' }
sp-staking = { default-features = false, version = '2.0.0' }
pallet-authorship = { version = '2.0.0', default-features = false }
pallet-im-online = { version = '2.0.0', default-features = false }
pallet-utility = { version = " 2.0.0", default-features = false }
pallet-offences = { version = " 2.0.0", default-features = false }
pallet-authority-discovery = { version = " 2.0.0", default-features = false }
sp-authority-discovery = { version = " 2.0.0", default-features = false }

sp-consensus-babe = { version = "0.8.0",  default-features = false }
pallet-babe = {  version = " 2.0.0", default-features = false }

primitives = { package = "core-primitives", path = "../core-primitives", default-features = false }


[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-scheduler/std',
    'pallet-collective/std',
    'pallet-membership/std',
    'pallet-elections-phragmen/std',
    'pallet-democracy/std',
    'pallet-treasury/std',
    'pallet-session/std',
    'pallet-staking/std',
    'sp-staking/std',
    "pallet-authorship/std",
    "pallet-im-online/std",
    "pallet-offences/std",
    "pallet-utility/std",
    "pallet-babe/std",
    'pallet-authority-discovery/std',
    'sp-consensus-babe/std',
    'sp-authority-discovery/std',
    
]

runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-scheduler/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-elections-phragmen/runtime-benchmarks',
    'pallet-democracy/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-session-benchmarking',
    "pallet-staking/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-offences-benchmarking",
    "pallet-utility/runtime-benchmarks",  
    "pallet-babe/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
]
