[package]
name = "indracore-statement-table"
version = "0.8.27"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/LayNath242/substrate", branch = "master" }
primitives = { package = "indracore-primitives", path = "../primitives" }
