[package]
name = "indracore-validation"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
thiserror = "1.0.23"
futures = "0.3.8"
log = "0.4.11"

trie = { package = "sp-trie", path ="../substrate/primitives/trie" }
babe-primitives = { package = "sp-consensus-babe", path ="../substrate/primitives/consensus/babe" }
txpool-api = { package = "sp-transaction-pool", path ="../substrate/primitives/transaction-pool" }
inherents = { package = "sp-inherents", path ="../substrate/primitives/inherents" }
primitives = { package = "sp-core", path ="../substrate/primitives/core" }
runtime_primitives = { package = "sp-runtime", path ="../substrate/primitives/runtime" }
consensus = { package = "sp-consensus", path ="../substrate/primitives/consensus/common" }
sp-api = { path ="../substrate/primitives/api" }
sp-blockchain = { path ="../substrate/primitives/blockchain" }
sp-timestamp = { path ="../substrate/primitives/timestamp" }

sc-basic-authorship = { path ="../substrate/client/basic-authorship" }
sc-client-api = { path ="../substrate/client/api" }
grandpa = { package = "sc-finality-grandpa", path ="../substrate/client/finality-grandpa" }
block-builder = { package = "sc-block-builder", path ="../substrate/client/block-builder" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path ="../substrate/utils/prometheus" }

indracore-primitives = { path = "../primitives" }
parachain = { package = "indracore-parachain", path = "../parachain" }

[dev-dependencies]
sp-keyring = { path ="../substrate/primitives/keyring" }