[package]
name = "cumulus-collator"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-core = { path = "../../substrate/primitives/core" }
sp-io = { path = "../../substrate/primitives/io" }
sp-consensus = { path = "../../substrate/primitives/consensus/common" }
sp-inherents = { path = "../../substrate/primitives/inherents" }
sp-state-machine = { path = "../../substrate/primitives/state-machine" }
sp-api = { path = "../../substrate/primitives/api" }

sc-client-api = { path = "../../substrate/client/api" }
sc-cli = { path = "../../substrate/client/cli" }
sc-block-builder = { path = "../../substrate/client/block-builder" }

# Indracore dependencies
indracore-service = { path = "../../node/service", features = [ "real-overseer" ] }
indracore-parachain = { path = "../../parachain" }
indracore-primitives = { path = "../../primitives" }
indracore-validation = { path = "../../validation" }
indracore-node-primitives = { path = "../../node/primitives" }
indracore-overseer = { path = "../../node/overseer" }
indracore-node-subsystem = { path = "../../node/subsystem" }

# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-network = { path = "../network" }
cumulus-primitives = { path = "../primitives" }
cumulus-runtime = { path = "../runtime" }

# Other dependencies
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.9"

[dev-dependencies]
# Cumulus dependencies
cumulus-test-runtime = { path = "../test/runtime" }
cumulus-test-client = { path = "../test/client" }

# Substrate dependencies
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-state-machine = { path = "../../substrate/primitives/state-machine" }
substrate-test-client = { path = "../../substrate/test-utils/client" }

# Indracore dependencies
indracore-test-client = { path = "../../node/test/client" }
indracore-node-subsystem-test-helpers = { path = "../../node/subsystem-test-helpers" }

# Other dependencies
env_logger = "0.7.1"