[package]
name = "cumulus-collator"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Other dependencies
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
parking_lot = "0.9"

# Substrate dependencies
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-io = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-cli = { git = "https://github.com/selendra/substrate", branch = "master" }

# Indracore dependencies
indracore-service = { path = "../../node/service", features = [ "real-overseer" ] }
indracore-parachain = { path = "../../parachain" }
indracore-primitives = { path = "../../primitives" }
indracore-node-primitives = { path = "../../node/primitives" }
indracore-overseer = { path = "../../node/overseer" }
indracore-node-subsystem = { path = "../../node/subsystem" }

# Cumulus dependencies
cumulus-network = { path = "../network" }
cumulus-primitives = { path = "../primitives" }
cumulus-runtime = { path = "../runtime" }
