[package]
name = "cumulus-consensus"
description = "Proxy Indracore's consensus as a consensus engine for Substrate"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# substrate deps
sc-client-api = { path = "../../substrate/client/api" }

sp-consensus = { path = "../../substrate/primitives/consensus/common" }
sp-core = { path = "../../substrate/primitives/core" }
sp-inherents = { path = "../../substrate/primitives/inherents" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-block-builder = { path = "../../substrate/primitives/block-builder" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-api = { path = "../../substrate/primitives/api" }
substrate-prometheus-endpoint = { path = "../../substrate/utils/prometheus" }

# indracore deps
indracore-primitives = { path = "../../primitives" }
indracore-runtime = { path = "../../runtime/indracore" }

# other deps
futures = { version = "0.3.1", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
log = "0.4"