[package]
name = "cumulus-consensus"
description = "Proxy Indracore's consensus as a consensus engine for Substrate"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Other deps
futures = { version = "0.3.8", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
tracing = "0.1.22"

# Substrate deps
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/selendra/substrate", branch = "master" }

# Indracore dependencies
indracore-primitives = { path = "../../primitives" }
indracore-runtime = { path = "../../runtime/indracore" }

# Cumulus dependencies
cumulus-network = { path = "../network" }
cumulus-primitives = { path = "../primitives" }
cumulus-runtime = { path = "../runtime" }
