[package]
name = "cumulus-message-broker"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Substrate dependencies
frame-support = { path = "../../substrate/frame/support", default-features = false }
frame-system = { path = "../../substrate/frame/system", default-features = false }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "1.3.5", features = [ "derive" ], default-features = false }

# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-inherents/std",
	"cumulus-primitives/std",
	"sp-std/std"
]