[package]
name = "cumulus-network"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# Substrate deps
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-consensus = { path = "../../substrate/primitives/consensus/common" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-api = { path = "../../substrate/primitives/api" }
sp-core = { path = "../../substrate/primitives/core" }
sc-client-api = { path = "../../substrate/client/api" }

# Indracore deps
indracore-primitives = { path = "../../primitives" }
indracore-statement-table = { path = "../../statement-table" }
indracore-validation = { path = "../../validation" }
indracore-overseer = { path = "../../node/overseer" }
indracore-node-primitives = { path = "../../node/primitives" }
indracore-node-subsystem = { path = "../../node/subsystem" }
indracore-service = { path = "../../node/service" }

# Cumulus deps
cumulus-primitives = { path = "../primitives" }

# other deps
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
log = "0.4.8"
parking_lot = "0.10.2"
derive_more = "0.99.2"

[dev-dependencies]
# Cumulus deps
cumulus-test-service = { path = "../test/service" }

# Indracore deps
indracore-test-client = { path = "../../node/test/client" }

# substrate deps
sc-client-api = { path = "../../substrate/client/api" }
sp-core = { path = "../../substrate/primitives/core" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-keystore = { path = "../../substrate/primitives/keystore" }
sp-consensus = { path = "../../substrate/primitives/consensus/common" }